[metadata]
name = cna
version = 0.1.6
author = Yakir Reshef, Laurie Rumker
author_email = yreshef@broadinstitute.org, lrumker@broadinstitute.org
description = covarying neighborhood analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/immunogenomics/cna
project_urls =
    Bug Tracker = https://github.com/immunogenomics/cna/issues
    Tutorial = https://nbviewer.jupyter.org/github/yakirr/cna/blob/master/demo/demo.ipynb
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
        multianndata>=0.0.4
        anndata>=0.7.1
        numpy>=1.18.1
        pandas>=1.0.3
        scipy>=1.4.1
        argparse>=1.1
        matplotlib>=3.1.3
        scanpy>=1.4.4.post1

[options.packages.find]
where = src
